2007-02-19  Mark Mitchell  <mark@codesourcery.com>

	* call.c (build_new_method_call): Ensure that explicit calls of
	destructors have type "void".

2007-02-19  Mark Mitchell  <mark@codesourcery.com>

	* decl2.c (import_export_decl): Reverse sense of 
	DECL_VISIBILITY_SPECIFIED test for target-specific visibility
	rules.

	Backport of:
	2006-07-20  Jason Merrill  <jason@redhat.com>
	* decl2.c (determine_visibility_from_class): Reverse sense of 
	DECL_VISIBILITY_SPECIFIED test for target-specific visibility
	rules.

2007-02-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/30536
	* decl.c (grokdeclarator): If __thread is used together with
	a storage class other than extern and static, clear thread_p
	after issuing diagnostics and fall through to checking the
	storage class.

2007-02-13  Release Manager

	* GCC 4.1.2 released.

2007-02-06  Mark Mitchell  <mark@codesourcery.com>

	PR target/29487
	* decl.c (finish_function): Use DECL_REPLACEABLE.
	* tree.c (cp_cannot_inline_tree_fn): Likewise.

2007-01-28  Andrew Pinski  <pinskia@gmail.com>

	PR C++/28988
	* semantics.c (finish_pseudo_destructor_expr): Check the
	destrutor name by calling check_dtor_name.

2007-01-10  Mark Mitchell  <mark@codesourcery.com>

	PR c++/28999
	* decl.c (make_typename_type): If the qualified name is not a
	type, issue an error.

2007-01-05  Jakub Jelinek  <jakub@redhat.com>

	PR c++/30382
	Backported from mainline
	2006-06-29  Jason Merrill  <jason@redhat.com>
	* parser.c (cp_parser_enum_specifier): Return early if
	type is error_mark_node.

2007-01-03  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2006-07-12  Jason Merrill  <jason@redhat.com>
	PR c++/28217
	* semantics.c (note_decl_for_pch): Don't premangle templates.

2007-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/29054
	* decl.c (revert_static_member_fn): Don't remove first
	argument without checking it is "this".

	PR c++/29535
	Backported from mainline
	2006-10-17  Mark Mitchell  <mark@codesourcery.com>